Updated bootstrap css row margin right from 15px to 0 to avoid horizontal scrollbar

--- a/src/PubLeashBundle/Resources/Css/simple-sidebar.css
+++ b/src/PubLeashBundle/Resources/Css/simple-sidebar.css
@@ -2,6 +2,11 @@
 .nav .open > a:hover,
 .nav .open > a:focus {background-color: transparent;}
 
+.row {
+    margin-left: -15px;
+    margin-right: 0;
+}
+
 /*-------------------------------*/
 /*           Wrappers            */
 /*-------------------------------*/
